--- a/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/buttons.less
@@ -224,6 +224,7 @@
   i {color: var(--link-primary);}
   background-color: transparent;
   padding-inline: var(--spacing-05);
+  justify-content: center;
   &:hover {
     color: var(--link-primary-hover);
     background-color: var(--background-hover);
